Bug 1288541 - Part 2: Inline _GetNextSetEntryForIterator intrinsic. r=arai

--HG--
extra : rebase_source : 39e8fa9d20e147853e652c022d2e58075cdb0d01