js/src/jit/shared/LOpcodes-shared.h
@@ -344,7 +344,7 @@
     _(IteratorEnd)                  \
     _(ArrayLength)                  \
     _(SetArrayLength)               \
-    _(GetNextMapEntryForIterator)   \
+    _(GetNextEntryForIterator)      \
     _(TypedArrayLength)             \
     _(TypedArrayElements)           \
     _(SetDisjointTypedElements)     \
